# word_of_wisdom

./: Cargo.toml  Dockerfile  Readme.org  docker-compose.yaml  script.sh
tcp_client/: Cargo.toml  Dockerfile  response.txt
tcp_client/src/: main.rs
tcp_server/: Cargo.toml  Dockerfile  config.yaml
tcp_server/src/: config.rs  errors.rs  main.rs
