[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
config = "0.11"
serde = {version = "1.0.144", features = ["derive"]}
